Fix FCBIS unit tests to wait for failpoints to hit numTimesEntered + 1

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.3, v5.2
    • Repl 2022-02-21
    • 34
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, in the FCBIS unit tests we wait for failpoints to be entered a specific number of times (i.e., 1). We should instead wait for the failpoint to hit numTimesEntered + 1

            Assignee:
            Huayu Ouyang
            Reporter:
            Huayu Ouyang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: