SERVER-63323 Fix FCBIS unit tests to wait for failpoints to hit numTimesEntered + 1

GitOrigin-RevId: 967073fa89b3d6a302baecfef6d46b2c1f10f712